# trovares_connector

./: .buildinfo  README.md  RELEASE.html  RELEASE.rst  genindex.html  index.html  objects.inv  pyproject.toml  quick_start.html  requirements.html  requirements.txt  search.html  searchindex.js  setup.cfg  trovares_connector.Neo4jConnector.html  trovares_connector.Neo4jDriver.html  xgt_connector.Neo4jConnector.html  xgt_neo4j_connector.Neo4jConnector.html
.doctrees/: environment.pickle  index.doctree  quick_start.doctree  trovares_connector.Neo4jConnector.doctree  trovares_connector.Neo4jDriver.doctree
.doctrees/jupyter/: index.doctree
.doctrees/odbc/: trovares_connector.MongoODBCDriver.doctree  trovares_connector.OracleODBCDriver.doctree  trovares_connector.SQLODBCDriver.doctree
.github/workflows/: codeql-analysis.yml  pypi.yml  pytest.yml  sphinx.yml  test_pypi.yml
_modules/: index.html  trovares_connector.html
_modules/trovares_connector/: odbc.html  trovares_connector.html
_modules/trovares_connector/neo4j_connector/: neo4j_connector.html
_modules/xgt_connector/: odbc.html
_modules/xgt_connector/neo4j_connector/: neo4j_connector.html
_sources/: RELEASE.rst  RELEASE.rst.txt  index.rst.txt  quick_start.rst  requirements.rst.txt  trovares_connector.Neo4jConnector.rst.txt  trovares_connector.Neo4jDriver.rst.txt  xgt_connector.Neo4jConnector.rst  xgt_connector.Neo4jDriver.rst  xgt_neo4j_connector.Neo4jConnector.rst.txt
_sources/jupyter/: index.rst  index.rst.txt
_sources/jupyter/neo4j/: hello_world.ipynb  hello_world.ipynb.txt  temporal_triangles.ipynb
_sources/jupyter/odbc/: cypher_with_sql.ipynb  save_to_mysql.ipynb  temporal_triangles.ipynb
_sources/odbc/: index.rst  index.rst.txt  trovares_connector.ODBCConnector.rst.txt  trovares_connector.SnowflakeODBCDriver.rst  xgt_connector.MongoODBCDriver.rst  xgt_connector.ODBCConnector.rst  xgt_connector.OracleODBCDriver.rst  xgt_connector.SAPODBCDriver.rst  xgt_connector.SQLODBCDriver.rst  xgt_connector.SnowflakeODBCDriver.rst.txt
_static/: basic.css  bizstyle.css  bizstyle.js  documentation_options.js  rocketgraph-icon.js
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  quick_start.rst  requirements.rst
docs/source/jupyter/: index.rst
docs/source/odbc/: index.rst
examples/: example.py  match.py  metadata.py  trovares_to_neo4j.py  xgt_to_neo4j.py
examples/neo4j/: example.py  match.py  metadata.py  query_translation.py  trovares_to_neo4j.py
examples/odbc/: match.py  match_oracle.py  match_sap.py
jupyter/: hello_world.html  hello_world.ipynb  index.html  temporal_triangles.html  temporal_triangles.ipynb
jupyter/neo4j/: hello_world.html  temporal_triangles.html
jupyter/odbc/: cypher_with_sql.html  hello_world.html  save_to_mysql.html  save_to_mysql.ipynb  temporal_triangles.html  temporal_triangles.ipynb
odbc/: index.html  trovares_connector.MongoODBCDriver.html  trovares_connector.ODBCConnector.html  trovares_connector.OracleODBCDriver.html  trovares_connector.SAPODBCDriver.html  trovares_connector.SQLODBCDriver.html  trovares_connector.SnowflakeODBCDriver.html  xgt_connector.MongoODBCDriver.html  xgt_connector.ODBCConnector.html  xgt_connector.SAPODBCDriver.html  xgt_connector.SQLODBCDriver.html
scripts/: build-documentation.sh  build_cypher_parser.sh  install.sh
src/trovares_connector/: __init__.py  common.py  odbc.py  trovares_connector.py
src/trovares_connector/frontend/: CypherListener.py
src/trovares_connector/neo4j_connector/: __init__.py  neo4j_connector.py  query_translator.py
src/xgt_connector/: odbc.py
src/xgt_connector/neo4j_connector/: __init__.py  neo4j_connector.py  query_translator.py
src/xgt_neo4j_connector/: __init__.py  xgt_neo4j_connector.py
test/: test_neo4j_connector.py  test_odbc_connector.py  test_query_translation.py  test_trovares_connector.py  test_xgt_neo4j_connector.py
testing/: .buildinfo  RELEASE.html  genindex.html  index.html  objects.inv  quick_start.html  requirements.html  search.html  searchindex.js  trovares_connector.Neo4jConnector.html  trovares_connector.Neo4jDriver.html  xgt_connector.Neo4jConnector.html  xgt_connector.Neo4jDriver.html
testing/.doctrees/: environment.pickle  requirements.doctree  trovares_connector.Neo4jConnector.doctree
testing/.doctrees/odbc/: index.doctree  trovares_connector.ODBCConnector.doctree
testing/_modules/: index.html
testing/_modules/trovares_connector/: odbc.html  trovares_connector.html
testing/_modules/xgt_connector/: odbc.html
testing/_sources/: RELEASE.rst  RELEASE.rst.txt  index.rst  index.rst.txt  quick_start.rst.txt  requirements.rst  requirements.rst.txt  trovares_connector.Neo4jConnector.rst.txt
testing/_sources/jupyter/: hello_world.ipynb.txt  index.rst.txt  temporal_triangles.ipynb.txt
testing/_sources/odbc/: index.rst  index.rst.txt  trovares_connector.MongoODBCDriver.rst  trovares_connector.ODBCConnector.rst  trovares_connector.OracleODBCDriver.rst  (+2 more)
testing/_static/: bizstyle.css  bizstyle.js  documentation_options.js  rocketgraph.css  trovares.css
testing/jupyter/: hello_world.html  index.html  odbc_hello_world.html  odbc_temporal_triangles.html  temporal_triangles.html
testing/odbc/: index.html  trovares_connector.MongoODBCDriver.html  trovares_connector.ODBCConnector.html  trovares_connector.OracleODBCDriver.html  trovares_connector.SAPODBCDriver.html  trovares_connector.SQLODBCDriver.html  trovares_connector.SnowflakeODBCDriver.html  xgt_connector.MongoODBCDriver.html  xgt_connector.ODBCConnector.html  xgt_connector.OracleODBCDriver.html  xgt_connector.SAPODBCDriver.html  xgt_connector.SQLODBCDriver.html  xgt_connector.SnowflakeODBCDriver.html
tools/Cypher/: frontend__init__.py
(+24 files in other folders)
