# -*- coding: utf-8 -*- --------------------------------------------------===#
#
#  Copyright 2022 Trovares Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#
#===----------------------------------------------------------------------===#

[metadata]
name = trovares_connector
version = 1.3.1
author = Trovares, Inc.
author_email = support@trovares.com
description = Connecting the Trovares xGT graph analytics engine to the Neo4j Database.
long_description = file: README.md
long_description_content_type = text/markdown
license = apache2
url = http://www.trovares.com/

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database
    Topic :: Database :: Front-Ends

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    neo4j>=4.4.1
    xgt>=1.10.1
    pyarrow>=7.0.0
    antlr4-python3-runtime>=4.10

[options.packages.find]
where = src

[options.extras_require]
odbc = arrow_odbc
