# -*- coding: utf-8 -*- --------------------------------------------------===#
#
#  Copyright 2022-2023 Trovares Inc.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#
#===----------------------------------------------------------------------===#

[metadata]
name = trovares_connector
version = 2.2.0
author = Trovares, Inc.
author_email = support@trovares.com
description = Connecting the Trovares xGT graph analytics engine to other applications.
long_description = file: README.md
long_description_content_type = text/markdown
license = apache2
url = http://www.trovares.com/

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Database
    Topic :: Database :: Front-Ends

keywords = Neo4j Trovares xGT cypher ODBC database

project_urls =
  Documentation = https://trovares.github.io/trovares_connector/
  Repository = https://github.com/trovares/trovares_connector
  Changelog = https://github.com/trovares/trovares_connector/blob/main/RELEASE.rst

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    neo4j>=4.4.1
    xgt>=1.14.0
    pyarrow>=7.0.0
    antlr4-python3-runtime>=4.10

[options.packages.find]
where = src

[options.extras_require]
odbc = arrow_odbc==0.2.0
       pandas
